fix tooltip align issue

--- a/css/style.css
+++ b/css/style.css
@@ -7481,6 +7481,9 @@ body:not(.tippy-touch) .tippy-popper[x-placement=left] .tippy-tooltip[data-anima
     #orders .forms-wrap.current {
       display: flex; }
 
+#portfolioChartGeneral .highcharts-tooltip {
+  margin-left: auto; }
+
 /* =================================================================== */
 /* basic-btn
 /* =================================================================== */
