--- a/sass/partials/_charts.scss
+++ b/sass/partials/_charts.scss
@@ -477,3 +477,9 @@
 		}
 	}
 }
+
+#portfolioChartGeneral {
+	.highcharts-tooltip {
+		margin-left: auto;
+	}
+}
